[package]
name = "justone"
version = "0.1.0"
authors = ["owtotwo <owtotwo@163.com>"]
license = "LGPL-3.0-only"
description = "A fast duplicate files finder, the rust implementation for JustOne."
edition = "2018"

[dependencies]
walkdir = "2"
twox-hash = "1.6.0"
indicatif = "0.15.0"
clap = "2"
filecmp = "0.1.0"